generated 50 problems with normal method, about to implement chaining